objects/LBI__Notification__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LBI__Digest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digest</label>
        <referenceTo>LBI__Digest__c</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error Log</label>
        <referenceTo>LBI__ErrorLog__c</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__IsCritical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LabelName__c</fullName>
        <description>Used to store the label used for the title.  This way if labels are translated we can still find the notifications in code.</description>
        <label>Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__NotificationDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LBI__RelatedRecordID__c</fullName>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ResolutionDate__c</fullName>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__ResolutionLink__c</fullName>
        <label>Resolution Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unread</fullName>
                    <default>true</default>
                    <label>Unread</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Notification</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__Title__c</columns>
        <columns>LBI__Type__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__ResolutionDate__c</columns>
        <columns>LBI__Digest__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000000000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>